revamp using Image tag for image optimize

--- a/src/content/posts/deep-dive-into-notebooklm.mdx
+++ b/src/content/posts/deep-dive-into-notebooklm.mdx
@@ -33,6 +33,14 @@ tags: ["AI Tools", "NoteBookLM", "Research Assistant", "Document Analysis", "Goo
 
 _Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
 
+import { Image } from 'astro:assets';
+import gameChanger from '../../../public/images/blog/deep-dive-into-notebooklm/Why%20NoteBookLM%20is%20a%20Game-Changer%20(And%20Next%20Up%20in%20My%20Toolbox).png';
+import gettingBearings from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM.png';
+import sheerTotal from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%202.png';
+import multiDocumentation from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%203.png';
+import mindMap from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%204.png';
+import additionalFeatures from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%205.png';
+
 Welcome back, fellow wanderers, to Day 2 of "Unlocking the AI Toolbox – A Skill-Wanderer's Journey"! It's insightful how AI explorations intersect with daily work. Recently, a colleague asked if she could share my [NoteBookLM Plus](https://notebooklm.google/) account, having heard it's great for quickly extracting info from documents. She was drowning in reports!
 
 That request highlighted [NotebookLM's](https://notebooklm.google/) value not just for tech enthusiasts, but for anyone needing to learn, research, or make sense of large texts efficiently—perhaps even at higher volumes or needing advanced features. So, for Day 2, we're diving into what I consider a must-have for all learners and information-workers: [Google's NoteBookLM](https://notebooklm.google/).
@@ -41,7 +49,11 @@ My goal isn't just listing features. As a Skill-Wanderer, I want to explore how 
 
 ## I. Why [NoteBookLM](https://notebooklm.google/) is a Game-Changer (And Next Up in My Toolbox)
 
-![Why NoteBookLM is a Game-Changer](/images/blog/deep-dive-into-notebooklm/Why%20NoteBookLM%20is%20a%20Game-Changer%20(And%20Next%20Up%20in%20My%20Toolbox).png)
+<Image 
+  src={gameChanger}
+  alt="Why NoteBookLM is a Game-Changer"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
 My colleague's interest encapsulates [NotebookLM's](https://notebooklm.google/) promise: a personal AI research assistant, expert in your own information. Its defining "source-grounding" means its knowledge is strictly limited to your uploaded documents, becoming an "instant expert" on your materials.
 
@@ -53,7 +65,11 @@ That experience, now reinforced by my colleague's interest in the Plus version (
 
 ## II. Getting My Bearings: Setting Up and Feeding [NoteBookLM](https://notebooklm.google/)
 
-![Getting My Bearings](/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM.png)
+<Image 
+  src={gettingBearings}
+  alt="Getting My Bearings"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
 For my main exploration this time, I decided to tackle a real beast: the "Workday Adaptive Planning Documentation." This isn't your average manual; we're talking a colossal 2721-page PDF (Workday-Adaptive-Planning-Documentation.pdf) which you can find here: http://doc.workday.com/content/dam/fmdita-outputs/pdfs/adaptive-planning/en-us/Workday-Adaptive-Planning-Documentation.pdf and see the sample below. My specific goal was to quickly get up to speed on how "model sheets" are handled within this ecosystem as it related to my [BA (Business Analyst) role](https://en.wikipedia.org/wiki/Business_analyst).
 
