--- a/src/content/posts/the-skill-wanderers-compass.mdx
+++ b/src/content/posts/the-skill-wanderers-compass.mdx
@@ -33,6 +33,11 @@ tags: ["AI Tools", "Learning Journey", "GitHub Copilot", "NoteBookLM", "Moodle",
 
 _Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
 
+import { Image } from 'astro:assets';
+import calibratingCompass from '../../../public/images/blog/the-skill-wanderers-compass/Calibrating%20the%20Compass.jpg';
+import earlyExperiments from '../../../public/images/blog/the-skill-wanderers-compass/Putting%20the%20Compass%20to%20Use%20Early%20AI%20Experiments.jpg';
+import moodlePlatform from '../../../public/images/blog/the-skill-wanderers-compass/My%20Open%20Learning%20Project%20–%20The%20Moodle%20Platform.jpg';
+
 Welcome! I'm really excited to finally kick off this new blog series, something I'm calling "Unlocking the AI Toolbox – A Skill-Wanderer's Journey" Thanks for joining me here on Day 1.
 
 As I promised when I temporarily paused the "Chronicles of a Home Data Center" series a little while back, my focus for now is shifting to delve into the world of Artificial Intelligence first. It feels like the right time, and honestly, it's where my curiosity has been pulling me strongly lately! This AI exploration feels like a natural next step in my Skill-Wanderer journey.
@@ -43,7 +48,11 @@ I realized pretty quickly that before I could really start making sense of speci
 
 ## Calibrating the Compass
 
-![Calibrating the Compass](/images/blog/the-skill-wanderers-compass/Calibrating%20the%20Compass.jpg)
+<Image 
+  src={calibratingCompass}
+  alt="Calibrating the Compass"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
 As I explored in much more detail in my previous post, "Before We Continue 'Chronicles of a Home Data Center': Let's Talk AI Skills", setting my "Skill-Wanderer's Compass" for AI involves navigating some critical ideas. It starts with understanding that AI, powerful as it is, primarily augments our abilities and absolutely requires human oversight, context, and verification – it's not autonomous, and we can't blindly follow its output without understanding the bigger picture (as my coworker's WordPress story illustrated).
 
@@ -57,9 +66,13 @@ My personal hunch is that this literacy will increasingly involve learning how t
 
 ## Putting the Compass to Use: Early AI Experiments
 
-![Putting the Compass to Use: Early AI Experiments](/images/blog/the-skill-wanderers-compass/Putting%20the%20Compass%20to%20Use%20Early%20AI%20Experiments.jpg)
+<Image 
+  src={earlyExperiments}
+  alt="Putting the Compass to Use: Early AI Experiments"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
-But theory needs practice. So, where have my wanderings taken me so far in actually using these AI tools? My background is primarily as a developer, but I often wear BA, PM, and test automation hats, so my experiments tend to reflect that blend, mostly focusing on software development and related tasks, but sometimes wandering further. Here's a snapshot of my initial forays:
+But theory needs practice. So, where have my wanderings taken me so farin actually using these AI tools? My background is primarily as a developer, but I often wear BA, PM, and test automation hats, so my experiments tend to reflect that blend, mostly focusing on software development and related tasks, but sometimes wandering further. Here's a snapshot of my initial forays:
 
 • **Tackling Dense Docs with [NoteBookLM](https://notebooklm.google.com/)**: One of my first really practical uses was feeding the massive, hundreds-of-pages user guide for my [Orange Pi](http://www.orangepi.org/) into [NoteBookLM](https://notebooklm.google.com/). Being able to ask specific questions and get relevant info pulled out instantly, instead of scrolling endlessly, was a game-changer for getting that hardware set up.
 
@@ -87,9 +100,13 @@ These are just my initial forays, scratching the surface of integrating these AI
 
 ## My Open Learning Project – The [Moodle Platform](https://en.wikipedia.org/wiki/Moodle)
 
-![My Open Learning Project - The Moodle Platform](/images/blog/the-skill-wanderers-compass/My%20Open%20Learning%20Project%20–%20The%20Moodle%20Platform.jpg)
+<Image 
+  src={moodlePlatform}
+  alt="My Open Learning Project - The Moodle Platform"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
-True to the Skill-Wanderer spirit, I believe that sharing the journey is as important as the journey itself. That led me to a recent project milestone: I've successfully set up my own personal instance of [Moodle LMS](https://en.wikipedia.org/wiki/Moodle)!
+True to the Skill-Wanderer spirit, I believe that sharing the journeyis as important as the journey itself. That led me to a recent project milestone: I've successfully set up my own personal instance of [Moodle LMS](https://en.wikipedia.org/wiki/Moodle)!
 
 If you haven't used it, [Moodle](https://en.wikipedia.org/wiki/Moodle) is a free, open-source Learning Management System – basically, a platform for hosting online courses. My reason for setting this up is actually quite mission-driven. I aim to use it as a platform to teach what I've learned along my own journey. There are two core motivations driving this: firstly, I strongly believe that the act of teaching is one of the best ways for me to deepen my own knowledge and solidify my understanding ('learning by teaching'). Secondly, and just as importantly, I want to give back to the wider community. My goal is to make the knowledge I share as accessible as possible to everyone.
 
