add final Image optimize tag

--- a/src/content/posts/deep-dive-into-notebooklm.mdx
+++ b/src/content/posts/deep-dive-into-notebooklm.mdx
@@ -73,9 +73,13 @@ That experience, now reinforced by my colleague's interest in the Plus version (
 
 For my main exploration this time, I decided to tackle a real beast: the "Workday Adaptive Planning Documentation." This isn't your average manual; we're talking a colossal 2721-page PDF (Workday-Adaptive-Planning-Documentation.pdf) which you can find here: http://doc.workday.com/content/dam/fmdita-outputs/pdfs/adaptive-planning/en-us/Workday-Adaptive-Planning-Documentation.pdf and see the sample below. My specific goal was to quickly get up to speed on how "model sheets" are handled within this ecosystem as it related to my [BA (Business Analyst) role](https://en.wikipedia.org/wiki/Business_analyst).
 
-![See the sheer total page](/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%202.png)
+<Image 
+  src={sheerTotal}
+  alt="See the sheer total page"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
-Uploading even such a large PDF was handled smoothly. [NotebookLM](https://notebooklm.google/) supports various formats: Google Docs/Slides, PDFs, web URLs, copied text, and YouTube URLs. It can even suggest web sources via "Discover Sources". Remember, uploads like Google Docs are "snapshots"; changes to the original require re-syncing. As my AI Compass states: quality in, quality out. With the Workday document, its comprehensiveness was key.
+Uploading even such a large PDF was handled smoothly.[NotebookLM](https://notebooklm.google/) supports various formats: Google Docs/Slides, PDFs, web URLs, copied text, and YouTube URLs. It can even suggest web sources via "Discover Sources". Remember, uploads like Google Docs are "snapshots"; changes to the original require re-syncing. As my AI Compass states: quality in, quality out. With the Workday document, its comprehensiveness was key.
 
 ### "Tackling Dense Docs" – Putting NoteBookLM to the Test
 
@@ -87,9 +91,17 @@ With the 2721-page Workday document loaded, I put [NotebookLM](https://notebookl
 
 • **Multi-Document Analysis & Visualizing "Model Sheets" with Mind Maps**: While my Workday exploration focused on one huge file, NotebookLM can synthesize across multiple sources. But even with a single large document, its visualization tools are powerful. For my "model sheets" query, [NotebookLM](https://notebooklm.google/) generated an interactive mind map. This visually connected "model sheets" to concepts like data import, versions, and reporting within the Workday documentation. Being able to see these complex relationships laid out, click on nodes for further summaries, and navigate the information visually made understanding the architecture an absolute breeze. It truly transformed a daunting research task into an efficient and insightful exploration. It can also analyze images in Google Slides/Docs!
 
-![Multi documentation](/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%203.png)
+<Image 
+  src={multiDocumentation}
+  alt="Multi documentation"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
-![A nice mind map](/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%204.png)
+<Image 
+  src={mindMap}
+  alt="A nice mind map"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
 ### Transforming Information: NoteBookLM as a Creative Partner
 
@@ -101,7 +113,11 @@ NotebookLM also helps create new things from your sources.
 
 • **Multilingual Outputs**: A valuable feature for those working across languages is the output language selector. You can choose your preferred language for generated text outputs like study guides or chat responses, making it easier to share work internationally.
 
-![Additional features](/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%205.png)
+<Image 
+  src={additionalFeatures}
+  alt="Additional features"
+  class="rounded-lg shadow-lg mb-6"
+/>
 
 ## V. NoteBookLM Through the Skill-Wanderer's Compass: Reflections
 
