change pic name to fix error

--- a/src/content/posts/deep-dive-into-notebooklm.mdx
+++ b/src/content/posts/deep-dive-into-notebooklm.mdx
@@ -34,12 +34,12 @@ tags: ["AI Tools", "NoteBookLM", "Research Assistant", "Document Analysis", "Goo
 _Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
 
 import { Image } from 'astro:assets';
-import gameChanger from '../../../public/images/blog/deep-dive-into-notebooklm/Why%20NoteBookLM%20is%20a%20Game-Changer%20(And%20Next%20Up%20in%20My%20Toolbox).png';
-import gettingBearings from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM.png';
-import sheerTotal from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%202.png';
-import multiDocumentation from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%203.png';
-import mindMap from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%204.png';
-import additionalFeatures from '../../../public/images/blog/deep-dive-into-notebooklm/Getting%20My%20Bearings%20Setting%20Up%20and%20Feeding%20NoteBookLM%205.png';
+import gameChanger from '../../../public/images/blog/deep-dive-into-notebooklm/Why-NoteBookLM-is-a-Game-Changer.png';
+import gettingBearings from '../../../public/images/blog/deep-dive-into-notebooklm/Getting-My-Bearings-Setting-Up-and-Feeding-NoteBookLM.png';
+import sheerTotal from '../../../public/images/blog/deep-dive-into-notebooklm/Getting-My-Bearings-Setting-Up-and-Feeding-NoteBookLM-2.png';
+import multiDocumentation from '../../../public/images/blog/deep-dive-into-notebooklm/Getting-My-Bearings-Setting-Up-and-Feeding-NoteBookLM-3.png';
+import mindMap from '../../../public/images/blog/deep-dive-into-notebooklm/Getting-My-Bearings-Setting-Up-and-Feeding-NoteBookLM-4.png';
+import additionalFeatures from '../../../public/images/blog/deep-dive-into-notebooklm/Getting-My-Bearings-Setting-Up-and-Feeding-NoteBookLM-5.png';
 
 Welcome back, fellow wanderers, to Day 2 of "Unlocking the AI Toolbox – A Skill-Wanderer's Journey"! It's insightful how AI explorations intersect with daily work. Recently, a colleague asked if she could share my [NoteBookLM Plus](https://notebooklm.google/) account, having heard it's great for quickly extracting info from documents. She was drowning in reports!
 
