fix picture broken

--- a/src/content/posts/the-price-of-independence.mdx
+++ b/src/content/posts/the-price-of-independence.mdx
@@ -32,12 +32,12 @@ tags: ["Home Data Center", "Cost Analysis", "AWS", "Hostinger", "Self-Hosting", 
 ---
 
 import { Image } from 'astro:assets';
-import billArrives from '../../../public/images/blog/the-price-of-independence/The%20Bill%20Arrives%20Tallying%20Up%20One%20Month%20of%20My%20Home%20Data%20Center.png';
-import awsCosts from '../../../public/images/blog/the-price-of-independence/Sizing%20Up%20the%20Cloud%20Giant%20Estimating%20Equivalent%20Costs%20on%20AWS.png';
-import hostingerPricing from '../../../public/images/blog/the-price-of-independence/The%20Budget%20Contender%20What%20if%20I%20Went%20with%20Hostinger.png';
-import hostingerPricing2 from '../../../public/images/blog/the-price-of-independence/The%20Budget%20Contender%20What%20if%20I%20Went%20with%20Hostinger%202.png';
-import intangibleValue from '../../../public/images/blog/the-price-of-independence/Beyond%20the%20Dollars%20and%20Cents%20The%20Intangible%20Value%20(and%20Hidden%20Efforts)%20of%20Self-Hosting.webp';
-import myVerdict from '../../../public/images/blog/the-price-of-independence/My%20Verdict%20Is%20My%20Home%20Data%20Center%20a%20Cost-Effective%20Venture%20(For%20Me).png';
+import billArrives from '../../../public/images/blog/the-price-of-independence/The-Bill-Arrives-Tallying-Up-One-Month-of-My-Home-Data-Center.png';
+import awsCosts from '../../../public/images/blog/the-price-of-independence/Sizing-Up-the-Cloud-Giant-Estimating-Equivalent-Costs-on-AWS.png';
+import hostingerPricing from '../../../public/images/blog/the-price-of-independence/The-Budget-Contender-What-if-I-Went-with-Hostinger.png';
+import hostingerPricing2 from '../../../public/images/blog/the-price-of-independence/The-Budget-Contender-What-if-I-Went-with-Hostinger-2.png';
+import intangibleValue from '../../../public/images/blog/the-price-of-independence/Beyond-the-Dollars-and-Cents-The-Intangible-Value.webp';
+import myVerdict from '../../../public/images/blog/the-price-of-independence/My-Verdict-Is-My-Home-Data-Center-a-Cost-Effective-Venture.png';
 
 Hey everyone, and welcome back! After our brief but important detour into the world of AI literacy in the last post (thanks for sticking with me!), we're diving straight back into the heart of the '[Chronicles of a Home Data Center.](https://wanderings.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)' If you've been following along, you know this blog itself is now proudly served from the [Kubernetes cluster](https://kubernetes.io/) I've painstakingly built right here at home.
 
