--- a/src/content/posts/the-skill-wanderers-compass.mdx
+++ b/src/content/posts/the-skill-wanderers-compass.mdx
@@ -34,9 +34,9 @@ tags: ["AI Tools", "Learning Journey", "GitHub Copilot", "NoteBookLM", "Moodle",
 _Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
 
 import { Image } from 'astro:assets';
-import calibratingCompass from '../../../public/images/blog/the-skill-wanderers-compass/Calibrating%20the%20Compass.jpg';
-import earlyExperiments from '../../../public/images/blog/the-skill-wanderers-compass/Putting%20the%20Compass%20to%20Use%20Early%20AI%20Experiments.jpg';
-import moodlePlatform from '../../../public/images/blog/the-skill-wanderers-compass/My%20Open%20Learning%20Project%20–%20The%20Moodle%20Platform.jpg';
+import calibratingCompass from '../../../public/images/blog/the-skill-wanderers-compass/Calibrating-the-Compass.jpg';
+import earlyExperiments from '../../../public/images/blog/the-skill-wanderers-compass/Putting-the-Compass-to-Use-Early-AI-Experiments.jpg';
+import moodlePlatform from '../../../public/images/blog/the-skill-wanderers-compass/My-Open-Learning-Project-The-Moodle-Platform.jpg';
 
 Welcome! I'm really excited to finally kick off this new blog series, something I'm calling "Unlocking the AI Toolbox – A Skill-Wanderer's Journey" Thanks for joining me here on Day 1.
 
