wrong domain fix

--- a/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
+++ b/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
@@ -52,7 +52,7 @@ import conclusionImage from '../../../public/images/blog/chronicles-of-a-home-da
 
 Greetings everyone, and a meaningful [Hùng Kings' Commemoration Day (Giỗ Tổ Hùng Vương)!](https://en.wikipedia.org/wiki/H%C3%B9ng_Kings%27_Festival) Here in Vietnam the day is a significant day where we honor the legendary founding fathers of our nation. Reflecting on the legacy of the [Hùng Kings](https://en.wikipedia.org/wiki/H%C3%B9ng_king) reminds me of the incredible grit, passion, perseverance, and vision required to build something lasting – qualities of leadership that laid the very foundations of our country. It's a profound inspiration, and I aspire to cultivate even a fraction of that dedication and foresight in my own projects and goals.
 
-Fittingly, this important public holiday grants some welcome downtime. While my usual rhythm is about one blog post per week or two week, I felt inspired by the spirit of the day – that sense of building and creation – to use this special occasion and the free time it provides to kick off a project I'm truly passionate about: documenting my own adventure in building a home data center from the ground up just as promised from [the previous post.](https://wanderings.skill-wander.com/home-k8s-first-day/)
+Fittingly, this important public holiday grants some welcome downtime. While my usual rhythm is about one blog post per week or two week, I felt inspired by the spirit of the day – that sense of building and creation – to use this special occasion and the free time it provides to kick off a project I'm truly passionate about: documenting my own adventure in building a home data center from the ground up just as promised from [the previous post.](https://wanderings.skill-wanderer.com/home-k8s-first-day/)
 
 Like many tech enthusiasts, I've been drawn to the idea for various reasons, but rising cloud costs have become a major catalyst for me recently. It really hit home when I realized that just three months of cloud service fees for a moderately powerful instance could easily match, or even exceed, the cost of buying a decent second-hand desktop or utilizing some of the perfectly capable hardware I already have lying around.
 
