--- a/src/content/posts/the-wanderers-path-a-journey-of-a-thousand-steps.mdx
+++ b/src/content/posts/the-wanderers-path-a-journey-of-a-thousand-steps.mdx
@@ -31,14 +31,14 @@ Think of me as your dedicated companion on an exciting adventure of discovery. L
 publishDate: "2025-06-19"
 category: "Skill-Wanderer Journey"
 readTime: "8 min read"
-image: "/images/blog/the-wanderers-path-a-journey-of-a-thousand-steps/hero.png"
+image: "/images/blog/the-wanderers-path-a-journey-of-a-thousand-steps/hero.jpg"
 tags: ["Skill-Wanderer", "Education", "Teaching", "Learning", "Mission", "Non-profit", "Journey"]
 ---
 
 _Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
 
 import { Image } from 'astro:assets';
-import heroImage from '../../../public/images/blog/the-wanderers-path-a-journey-of-a-thousand-steps/hero.png';
+import heroImage from '../../../public/images/blog/the-wanderers-path-a-journey-of-a-thousand-steps/hero.jpg';
 
 <Image src={heroImage} alt="The Wanderer's Path: A Journey of a Thousand Steps" class="w-full h-auto rounded-lg shadow-lg mb-8" />
 
