--- a/src/content/posts/the-price-of-independence.mdx
+++ b/src/content/posts/the-price-of-independence.mdx
@@ -39,7 +39,7 @@ import hostingerPricing2 from '../../../public/images/blog/the-price-of-independ
 import intangibleValue from '../../../public/images/blog/the-price-of-independence/Beyond-the-Dollars-and-Cents-The-Intangible-Value.webp';
 import myVerdict from '../../../public/images/blog/the-price-of-independence/My-Verdict-Is-My-Home-Data-Center-a-Cost-Effective-Venture.png';
 
-Hey everyone, and welcome back! After our brief but important detour into the world of AI literacy in the last post (thanks for sticking with me!), we're diving straight back into the heart of the '[Chronicles of a Home Data Center.](https://wanderings.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)' If you've been following along, you know this blog itself is now proudly served from the [Kubernetes cluster](https://kubernetes.io/) I've painstakingly built right here at home.
+Hey everyone, and welcome back! After our brief but important detour into the world of AI literacy in the last post (thanks for sticking with me!), we're diving straight back into the heart of the '[Chronicles of a Home Data Center.](https://wanderings.skill-wanderer.com/blog/?category=Home+Data+Center)' If you've been following along, you know this blog itself is now proudly served from the [Kubernetes cluster](https://kubernetes.io/) I've painstakingly built right here at home.
 
 Now that the silicon dust has settled a bit from the initial setup, and the hum of the servers has become a familiar background rhythm, one burning question remains—a question many of you might be pondering if you're considering a similar path: **what does this all actually cost to run each month?** Is this passion project secretly draining my bank account, or is it a surprisingly savvy move in the long run?
 
